--- a/views/power.ejs
+++ b/views/power.ejs
@@ -76,12 +76,12 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Lucky Bast*rd</h5>
+          <h5 class="modal-title" id="staticBackdropLabel">You have been pranked!</h5>
           <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
         </div>
         <form action="/monopoly/<%=p%>/card">
           <div class="modal-body">
-            You have now given 2 extra chances
+            Better luck next time.....
           </div>
           <div class="modal-footer">
             <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
