--- a/views/purchase.ejs
+++ b/views/purchase.ejs
@@ -8,7 +8,7 @@
                 <% } %> 
                 <div class="card-body">
                   <h5 class="card-title"><%= currentBlock.object.title %></h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">By buying this city your opponent would have to pay &#8377 <%=currentBlock.object.rent%> to you required they ever comes to your land. </p>
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">Cost: &#8377 <%= currentBlock.object.price %></li>
