--- a/views/winner.ejs
+++ b/views/winner.ejs
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twisted Monopoly</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&family=Rubik+Distressed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script">
     <style>
-        
+        body { 
+          background-image:url('https://media1.giphy.com/media/BPJmthQ3YRwD6QqcVD/giphy.gif?cid=ecf05e47l1vt6q2hky761lxr0g2jwon2e4dkozvx263eclfw&rid=giphy.gif&ct=g'); 
+          background-repeat:repeat; 
+          background-size: cover;
+          color: white;
+          font-family: 'Dancing Script', serif;
+          font-size: 36px;
+        }
     </style>
 </head>
 <body>
     <main>
         <div class="d-flex justify-content-center">
-            <div class="card" style="width: 40rem;">
-                <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669823325/dsMp/72n62k_g9khkd.jpg" class="card-img-top" alt="Congo">
-                <div class="card-body">
-                  <h5 class="card-title">Congratulations!!!</h5>
-                  <p class="card-text"><%= winner %> won the twisted monopoly game by &#8377 <%= dif %> </p>
-                  <a href="/" class="btn btn-primary">Thank You</a>
-                </div>
-              </div>
-        </div>     
+        <%= winner %> won the twisted monopoly game by &#8377 <%= dif %> 
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
